temp publish maven local

--- a/extensions/leanback/build.gradle
+++ b/extensions/leanback/build.gradle
@@ -45,4 +45,4 @@ ext {
     releaseArtifact = 'extension-leanback'
     releaseDescription = 'Leanback extension for ExoPlayer.'
 }
-apply from: '../../publish.gradle'
+apply from: '../../publish.gradle.kts'
