--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
+
+apply from: 'extra.gradle.kts'
+
 buildscript {
     repositories {
         google()
@@ -20,6 +23,14 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath 'com.novoda:bintray-release:0.9.1'
         classpath 'com.google.android.gms:strict-version-matcher-plugin:1.2.0'
+    }
+    // Workaround for the following test coverage issue. Remove when fixed:
+    // https://code.google.com/p/android/issues/detail?id=226070
+    configurations.all {
+        resolutionStrategy {
+            force 'org.jacoco:org.jacoco.report:0.7.4.201502262128'
+            force 'org.jacoco:org.jacoco.core:0.7.4.201502262128'
+        }
     }
 }
 allprojects {
