--- a/extensions/jobdispatcher/build.gradle
+++ b/extensions/jobdispatcher/build.gradle
@@ -46,4 +46,4 @@ ext {
     releaseArtifact = 'extension-jobdispatcher'
     releaseDescription = 'Firebase JobDispatcher extension for ExoPlayer.'
 }
-apply from: '../../publish.gradle'
+apply from: '../../publish.gradle.kts'
