--- a/extensions/rtmp/build.gradle
+++ b/extensions/rtmp/build.gradle
@@ -47,4 +47,4 @@ ext {
     releaseArtifact = 'extension-rtmp'
     releaseDescription = 'RTMP extension for ExoPlayer.'
 }
-apply from: '../../publish.gradle'
+apply from: '../../publish.gradle.kts'
