--- a/extensions/gvr/build.gradle
+++ b/extensions/gvr/build.gradle
@@ -44,4 +44,4 @@ ext {
     releaseArtifact = 'extension-gvr'
     releaseDescription = 'Google VR extension for ExoPlayer.'
 }
-apply from: '../../publish.gradle'
+apply from: '../../publish.gradle.kts'
