--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -57,4 +57,4 @@ ext {
     releaseArtifact = 'exoplayer-testutils'
     releaseDescription = 'Test utils for ExoPlayer.'
 }
-apply from: '../publish.gradle'
+apply from: '../publish.gradle.kts'
